@@ -14,7 +14,7 @@
 			<%= stylesheet_link_tag 'wilderness/wilderness-back-end' %> 
 			<%= stylesheet_link_tag 'cms' %> 
 			<%= stylesheet_link_tag 'wilderness/comments' %> 
-			<%= stylesheet_link_tag 'wilderness/pagination ' %> 
+			<%= stylesheet_link_tag 'wilderness/pagination' %> 
 			<%= javascript_include_tag :defaults %>
 			<%= javascript_include_tag "wilderness/wilderness" %>   
 			<%= javascript_include_tag "wilderness/jquery-1.3.2.min" %>   
